test/e2e/functional/alb-canary-multi-ingress-rollout.yaml
apiVersion: v1
kind: Service
metadata:
  name: alb-canary-multi-ingress-root
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: alb-canary-multi-ingress
---
apiVersion: v1
kind: Service
metadata:
  name: alb-canary-multi-ingress-desired
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: alb-canary-multi-ingress
---
apiVersion: v1
kind: Service
metadata:
  name: alb-canary-multi-ingress-stable
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: alb-canary-multi-ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-canary-multi-ingress-1
  annotations:
    kubernetes.io/ingress.class: alb
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alb-canary-root
            port:
              name: use-annotation
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-canary-multi-ingress-2
  annotations:
    kubernetes.io/ingress.class: alb
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alb-canary-root
            port:
              name: use-annotation
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: alb-canary-multi-ingress
spec:
  selector:
    matchLabels:
      app: alb-canary-multi-ingress
  template:
    metadata:
      labels:
        app: alb-canary-multi-ingress
    spec:
      containers:
      - name: alb-canary-multi-ingress
        image: nginx:1.19-alpine
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: 16Mi
            cpu: 5m
  strategy:
    canary:
      canaryService: alb-canary-multi-ingress-desired
      stableService: alb-canary-multi-ingress-stable
      trafficRouting:
        alb:
          ingresses:
            - alb-canary-multi-ingress-1
            - alb-canary-multi-ingress-2
          rootService: alb-canary-root
          servicePort: 80
      steps:
      - setWeight: 10
      - pause: {duration: 5s}
      - setWeight: 20
      - pause: {duration: 5s}
